Draft manuscript for co-authors
(word count 8401)

--- a/_analysis/ms.qmd
+++ b/_analysis/ms.qmd
@@ -292,3 +292,107 @@ Figure 2 - Implementing Adaptive Preregistration. The preregistration (blue step
 ## Evaluating and Refining Adaptive Preregistration with a Case Study
 
 We preregistered a real-world model-based research problem as a case-study for evaluating and testing the Preregistration Template and proposed Adaptive Preregistration methodology. The case study analysed the effectiveness of environmental flows on maintaining riparian vegetation condition in Victoria, Australia [@Tonkin2020]. We captured the case-study researchers’ feedback about the Preregistration Template and Adaptive Preregistration methodology using the version-control and collaborative project management features of git and GitHub [@BenBondLamberty:2018by; @Blischak:2016kr; @braga2023]. We used these tools for documenting both the analytic decisions of the researcher, and for using the preregistration process itself to ‘live-develop’ the template. For example, if it turned out that we had missed an important item, or the order and structure of the template needed to change in the process of completing the preregistration, the suggested change and its justification would be both recorded in GitHub. We also conducted follow-up semi-structured interviews to capture more detailed reflections of the case-study researchers.
+
+# Results
+
+## The Preregistration Template
+
+The final Preregistration Template, refined by application of the draft Preregistration Template developed from the user-research workshops to the case study, is hosted at [https://github.com/egouldo/EcoConsModPreReg](https://github.com/egouldo/EcoConsModPreReg.). We provide the template as a quarto markdown extension template [@Allaire2024 insert ZENODO DOI] which can be installed and rendered to three different formats, html, pdf, and docx (Supp Mat C). Intermediate versions of the template developed through application of the initial template to the case-study are available in [the case-study preregistration document's GitHub commit history](https://github.com/egouldo/VEFMAP_VEG_Stage6/blob/263914d434864679d1e5cacca34caef10fe4d67c/analysis/preregistration_template.Rmd) or in [case-study GitHub repository releases](https://github.com/egouldo/VEFMAP_VEG_Stage6/releases).
+
+## Findings From the Case Study
+
+The application of our preregistration template and Adaptive Preregistration methodology to the environmental flows modelling case study occurred across three distinct stages (Table 1, Fig. 3), with two interim preregistrations (Version 1 and Version 2) preceding the finalised preregistration (Version 3, Supp Mat E), each corresponding to distinct phases in both the Preregistration and Modelling & Analysis processes. While preparing Version 1, the modellers decided that they needed to conduct some analysis to specify a set of appropriate candidate models. They preregistered a pilot analysis (Version 2) which used a subset of the full dataset to preserve some degree of data-dependent decision-making while permitting a degree of exploratory analysis. Results from the pilot analysis informed subsequent preregistration of the Main Analysis on the full dataset (Version 3, Supp. Mat. E). Several classes of data-dependent decisions (Liu et al. 2020) emerged during our case study, which were managed using a combination of registered flexibility and interim preregistrations:
+
+-   *Data-flow dependencies*: where the output of one decision is the input to another. For example, the models parameterised on the full dataset in the case study’s Main Analysis were subjected to a suite of model checks as outlined in the decision-trees in Preregistration Version 3, with the results of model checking informing *a priori* specified alternative model structures and model functional forms.
+-   *Information dependency*: where one decision informs another. For example, outcomes from the exploratory pilot analysis (Interim Preregistration Version 2, Table 1) informed the model structures specified in Preregistration Version 3 (Table 1), as well as the decision heuristics for triggering their fitting and acceptance.
+-   *Procedural dependency*: where downstream decisions would not exist if some alternative upstream decision was made instead. For example, if preliminary analysis of the data had not revealed over-dispersion or zero-inflation in the data, then the case study modellers would not have fitted zero-inflated Poisson models, nor would they have trialled accounting for over-dispersion or refitting using negative binomial models (Fig. 4).
+
+### Interim Preregistration (Versions 1 and 2)
+
+Two initial candidate models were preregistered in Version 1 (Fig. 3), one for each study response variable, however modellers were unsure if these candidate models would be supported by the dataset due to spatio-temporal patchiness and heterogeneous density in the data. Preregistration Version 2 described an exploratory pilot analysis that aimed to resolve critical uncertainties about how to operationalise the models, given data constraints, and how to specify a candidate set of models that could feasibly be fitted to the full dataset (Table 1). This involved partitioning the dataset into a ‘Pilot Analysis’ subset for making subsequent data-informed modelling decisions, which were then preregistered in a subsequent preregistration of the ‘Main Analysis’ (Version 3, Table 1 and Fig. 3). The pilot analysis dataset consisted of observations from a single site with good temporal data coverage, while the main analysis dataset comprised the full dataset, including the pilot dataset. Preliminary analysis informed how to operationalise the models given the underlying structure of the dataset. For example, simple tests of data distributions within hierarchies were required to check for data spread and the presence of zero-inflation, while checks for collinearity among candidate predictor variables were needed to prevent confounding and overfitting, and to ensure relevant interactions were captured in the models. The same procedures for evaluating model fit and model checking were preregistered for both the pilot and main analysis (Fig. 3B), however the purpose of model checking in the Pilot Analysis was to identify appropriate model structures, whereas the purpose for the Main Analysis was to ensure that the fitted models were supported by the data.
+
+### Final Preregistration (Version 3): Main Analysis
+
+In Version 3 of the Preregistration, we derived and preregistered:
+
+1.  A preferred candidate model or ‘full model’ for each response variable (vegetation richness and vegetation cover), to be fitted to the full dataset (Initial Preregistration, Fig. 3, Supp. Mat. E, p13).
+2.  A candidate set of simplified models that separately captured different flow components for each response variable, with two versions of the flow events model for vegetation cover (Flow Events Models A & B, Fig. 3, Supp. Mat. E, pp.20-21).
+3.  Decision-trees for triggering fitting and acceptance of the candidate simplified models should the preferred full model specifications fail to converge and/or provide appropriate parameter estimates (Fig. 3).
+4.  A second flexible strategy, for determining model functional form and to account for potential over-dispersion (Fig. 3). Preregistering this flexibility was motivated by the modellers’ concerns that the actual data distributions in the full dataset did not match expectations informed by the pilot analysis. This final decision-point for choosing the model family is subjective and fuzzy, and explicit weightings between the three model performance criteria could not be expressed or preregistered. Instead, modellers explained that the final decision will be guided by the model’s overall ability to capture key associations reliably.
+
+| Preregistration Version | Preregistration Process | Modelling and Analysis Process |
+|----|----|----|
+| **Version 1:** (v0.10 – v0.8.1) | Establish problem context, study background and aims, describe data collection and data cleaning process, articulate modelling objectives, and specify candidate models. | Data cleaning and preparation undertaken concurrently by lead and supporting researchers due to limited resourcing and short timelines for project deliverables. Candidate models addressing different components of the research question were preregistered. Identify data structural properties and potential consequences for model fitting |
+| **Version 2:** (v0.9.0-v.0.12.5) | Describe Pilot Analysis on data subset and specify registered flexibility in the form of decision heuristics. | Critical uncertainties in modelling decisions were articulated (e.g. how do we classify best flow regime based on inundation data?). In addition, data partitioning, exploratory data analysis, refined candidate models and model checking procedure preregistered |
+| **Version 3:** (v0.13.0-v.0.20.1) | Describe Main Analysis, including specification of decision tree for model selection process based on results of pilot analysis. | Conducted modelling and analysis as outlined in preregistration. Reported deviations and rationale as necessary. |
+|  |  |  |
+
+: Table 1 - Key stages of the modelling and Adaptive Preregistration process implemented in the environmental flows modelling case study. Version numbers in parentheses are GitHub tags, marking snapshots of the repository for each Preregistration Version.
+
+<!--# Insert Figure 3 - case study workflow -->
+
+Figure 3 illustrates the evolution of model development across preregistration iterations in the case study. The two Registered Flexibility steps in the Main Analysis (v3) (shown in blue) are further described in Fig. 4.
+
+<!--# Insert Figure 4 -->
+
+Figure 4 - illustrates how registered flexibility was applied within the case study preregistration, for selecting model structure (A) and choosing an alternative model functional form to the default (zero-inflated Poisson) (B).
+
+## Adaptive Preregistration in Practice: Benefits and Challenges
+
+At the end of user-testing, case study researchers concluded that preregistration is a valuable tool to facilitate Good Modelling Practice, but also acknowledged several difficulties encountered during Adaptive Preregistration (Table 3).
+
+Table 3 Summary of challenges, benefits and added value of and tips to using Adaptive Preregistration for ecological modelling.
+
+# Discussion
+
+The principles and potential benefits of preregistration are clear: preregistration encourages more careful and considered analysis, restricts researcher degrees of freedom, and thereby mitigates the Questionable Research Practices that can derail research. Ultimately, preregistration can improve the reproducibility and reliability of scientific research [@koivisto2024; @ODea2021]. Existing preregistration templates sit squarely in an idealised hypothesis testing research space. In contrast, ecologists take a different approach to analysis, relying more on modelling complex relationships than significance testing. Modelling is usually a more iterative process, with frequent moves between exploratory and confirmatory practices. Although this makes preregistration less approachable for model-based studies, it need not preclude preregistration entirely. We have reconceptualised preregistration as an intrinsically adaptive process that can move with researchers through the modelling process. We show how Adaptive Preregistration can still encourage model reproducibility, transparency, and facilitate uptake of best practice by taking a structured, principled and flexible approach to preregistration.
+
+Despite fears that preregistration may limit creativity and flexibility [@Pu2019], lessen researchers' engagement with data and result in “punch-card” style analysis [@MacEachern2019], the case-study supported Liu et al’s [-@Liu2020] claim that preregistration can improve both reproducibility of process and research outputs as well as analytic decision-making. By enforcing separation between planning and conducting the analysis, case-study modellers found that following a structured approach to analysis (even with preregistered flexibility) helped to keep them on track, maintaining clear links between methodological decisions and the study aims and conceptual models (Table 3).
+
+By encouraging careful analytic decision-making while formally incorporating data exploration into the modelling process through registered flexibility, data-subsetting and interim preregistrations, Adaptive Preregistration traded largely unbounded explorations for more goal-directed analyses, constraining researcher degrees of freedom and potential 'fishing expeditions'. In the absence of Adaptive Preregistration, the case study modellers felt that they still would have taken the same modelling approach but would have started with a much larger decision-space in which they would have trialled more variations on model structure and predictor variable operationalisations along the way. Although this may have resulted better overall model fit, it would also risk overfitting (Lewis et al. 2023, Barnard et al. 2019).
+
+Adaptive Preregistration increases both 'analytic' and 'model transparency’' [@Bodner2020; @Lupia2014] by ensuring that modelling choices, steps, assumptions, and expectations about outputs are clearly articulated and documented in greater detail than they typically would be. Interim preregistrations reveal intermediate models, analyses and results, which circumvents reporting only the final models. Additionally, registered flexibility exposes the impact of exploratory and data-contingent analyses on modelling choices. In our case-study, registered flexibility for choosing between alternative model functional forms revealed all alternative decisions under consideration, and what analytical outcomes would trigger the selection of each alternative. This process provided transparent justification for the choice of model functional form. Adaptive Preregistration can therefore provide a more transparent account of how analytic conclusions are drawn from the data, which are often poorly reported in ecological modelling studies [@Zurell2020a].
+
+The structure and contents of the preregistration template can encourage Good Modelling Practice by explicitly eliciting information about assumptions, expectations, and rationale behind modelling choices. Modelling is considered by many to be an 'art form' in addition to a science [@MacEachern2019; @Smaldino:2020; @Taylor2018], consisting of tacit knowledge and expertise with decision-points that may not always be recognised by modellers [@Babel2019a; @lahtinen2017]. In our modelling case-study, it took many attempts to properly articulate registered flexibility when selecting model structure and functional form, perhaps because these procedures were so ingrained into the modeller's practice. By directing users to specific modelling tasks, preregistration prompted modellers to explicitly recognise, document and justify tacit modelling choices.
+
+## Difficulties encountered using Adaptive Preregistration in our case study
+
+Our case study researchers reported that the most challenging aspects of Adaptive Preregistration involved anticipating analysis decisions in advance, in addition to changes to model management and timelines. Registering flexibility requires careful thought and time to adequately capture analytic decision-points and describe the process for resolving those decisions. In our case study, while the decision heuristic for choosing model functional form was accurately preregistered, the process for determining model structure was underspecified in the ‘Main Analysis’ preregistration. This occurred because the preregistration did not specify that the heuristic should only be applied to some models and not others (i.e. Flow event models and not Flow regime models).
+
+The preregistration, while detailed, did not adequately capture the modellers' intended and implemented model selection strategy, where after fitting the set of simpler models identified from the pilot study (preregistration version 2, Table 1), the modellers would iteratively trial different combinations of model terms to make the models closer to the more complex ‘maximal’ models identified in the initial preregistration (preregistration version 1, Table 1). The preregistered specification did not explain which combinations of model terms would be trialled, and in what order they would be trialled, rendering components of the model selection process unregistered.
+
+The case-study researchers noted that anticipating potential analysis scenarios and decision pathways was complicated by large uncertainties about the underlying system dynamics in a complex and patchy dataset. Tight project turn-around times meant that there was limited time to iteratively review analysis specification decisions, resulting in some decisions and components of the modelling process being omitted from the preregistration. Following our Adaptive Preregistration protocol more closely may have avoided underspecificity in the case-study. However, because of temporal and resource constraints on the case study project, compounded by the resource costs required to upskill some members of the research team with git and GitHub, the protocol for implementing Adaptive Preregistration with git & GitHub as outlined in our guide was not fully followed in the case-study preregistration.
+
+These aspects combined may feel like Adaptive Preregistration is slowing the research process because preregistration front-loads the decision-making and planning in the project timeline, delaying analysis and implementation of the preregistration [@evans2023], which may be incongruent with existing institutional approaches to the governance, administration and operational support of modelling [i.e. "model management" @Arnold2020, p2]. In hindsight, the case study preregistration process may have been more efficient and better specified if modellers and/or biostatisticians were brought earlier into the project’s planning and decision-making process to allow sufficient time to review, record and better connect analysis decisions to project aims. While we recognise that learning and implementing a new approach is unappealing at first, Adaptive Preregistration can save time later on, but requires a rearrangement of project timelines and resources.
+
+We suggest the following considerations when implementing Adaptive Preregistration for the first time:
+
+1.  Adaptive Preregistration is likely to become easier and more efficient as researchers gain experience and familiarity with preregistration.
+
+2.  Start with simple descriptions or dot points in preregistration responses and build detail and complexity in analysis specification incrementally, as well as in thorough and ongoing collaborative review.
+
+3.  Building a database of decision-points in common modelling methods and approaches may aid in registering flexibility and evolve naturally over time through practice.
+
+4.  Any attempt to implement Adaptive Preregistration is unlikely to work perfectly the first time, there will be mistakes and details that are omitted. Being upfront about this in study reporting is still better than avoiding the process all together.
+
+5.  For projects where using git & GitHub may be too difficult, separate sequential analysis plans could be preregistered for the same study with metadata linking the chain of preregistrations.
+
+## What's the right resolution for a modelling preregistration template?
+
+We aimed to design a preregistration template that was ‘parsimonious’, in that 1) template items should be specific and exhaustive enough to adequately constrain researcher degrees of freedom [@Wicherts2016] so as to; 2) facilitate transparent documentation of the modelling paths and decisions conducted during research, while; 3) not requiring a prohibitive level of detail. Increasing the completeness and resolution of the template in capturing decisions throughout the modelling process may improve the ability of preregistration to restrict researcher degrees of freedom and transparently report results, however it also makes the preregistration more challenging to complete. Refining the template during user-testing, greatly reduced the perceived difficulty of preregistration. However, our case-study researchers conceded that some modellers may still consider the final template to be too cumbersome to invest the time in preregistration.
+
+The writing and reporting phase of the case-study also highlighted the need for ongoing refinement of the template content and structure so as to facilitate the secondary use-case identified for our template, ‘preregistration checking’, or the process of verifying the reported analyses in a study were conducted as preregistered [@pu2019a]. Information about the registered flexibility for determining alternative model functional forms was spread over multiple sub-sections within the case-study's preregistration template, hampering our ability to conduct preregistration checking post-analysis. We simplified the template during testing to ameliorate this issue, but it might be further improved by building modularity into the template for multiple or complex models.
+
+## Future Work
+
+While we believe we have partly addressed the problem of preregistering model-based research with the Adaptive Preregistration protocol, further work remains, particularly around developing cyberinfrastructure to effectively and transparently handle registering and reporting flexible analyses. We encourage modellers to preregister their research using our template and Adaptive Preregistration protocol flexibly, adopting elements that work and experimenting with alternative implementations that work better.
+
+New preregistration templates for expanding application of preregistration specific modelling approaches and methods could be developed by integrating our template with existing reporting checklists and guidelines, such as ODMAP for reporting Species Distribution Models [@Fitzpatrick2021]. Currently, improvements to the template content, structure and visual presentation are limited by the infrastructure at existing registries. The registry platform requires a dedicated instrument or protocol for capturing flexible analyses, as well as reporting their outcomes and linking them to future decisions in subsequent interim preregistrations, which cannot be accommodated by existing registries, such as the [Open Science Foundation (OSF)](https://help.osf.io/article/330-welcome-to-registrations), [OSF registries](https://www.cos.io/products/osf-registries), [As Predicted](https://aspredicted.org/), and [EcoEvoArXiv](https://ecoevorxiv.org/).
+
+# Conclusions
+
+Although some challenges remain outstanding in applying preregistration to ecological modelling, it is important to remember the costs and risks of not preregistering modelling studies. Ecological modelling has long been plagued by poor transparency [@deVos:2011uk; @Jakeman:2006ii; @Schmolke:2010fd]. Incomplete reporting of the modelling process risks models being used in inappropriate applications or decision contexts [@Grimm:2014es] and may mask poor model design or serious flaws in the model, resulting in adverse or irreversible outcomes when informing decision-making [@Addison:2013wa]. Moreover, a lack of transparency in describing ecological models and reporting the modelling process provides significant opportunity for undisclosed researcher degrees of freedom, and hence, the possibility of Questionable Research Practices, with researchers routinely engaging in executing alternatively analyses, and selectively reporting them when they do [@Fraser:2018cl; @Liu2020; @kimmel2023]. Reproducible, transparent and reliable models are essential for sound conservation decision-making [@Garcia-Diaz2019; @bodner2021] and Adaptive Preregistration can improve documentation of modelling decisions, which is helpful for remembering and explaining the study's method at the time of report-writing, to aid others in replicating and understanding model-based research, and to communicate to funders and stakeholders.
+
+We provide a template and methodology for ‘Adaptive Preregistration’ that we hope will extend the benefits of preregistration to model-based research in a way that strengthens rather than inhibits that research. Although we focus on ecological applications in this paper, many elements of the template are relevant across fields, and the template is open source and can be readily adapted to new fields and purposes.
+
+# References
