Add table 1 tag and cross-reference

--- a/_analysis/ms.qmd
+++ b/_analysis/ms.qmd
@@ -300,15 +300,15 @@ The final Preregistration Template, refined by application of the draft Preregis
 
 ## Findings From the Case Study
 
-The application of our preregistration template and Adaptive Preregistration methodology to the environmental flows modelling case study occurred across three distinct stages (Table 1, Fig. 3), with two interim preregistrations (Version 1 and Version 2) preceding the finalised preregistration (Version 3, Supp Mat E), each corresponding to distinct phases in both the Preregistration and Modelling & Analysis processes. While preparing Version 1, the modellers decided that they needed to conduct some analysis to specify a set of appropriate candidate models. They preregistered a pilot analysis (Version 2) which used a subset of the full dataset to preserve some degree of data-dependent decision-making while permitting a degree of exploratory analysis. Results from the pilot analysis informed subsequent preregistration of the Main Analysis on the full dataset (Version 3, Supp. Mat. E). Several classes of data-dependent decisions (Liu et al. 2020) emerged during our case study, which were managed using a combination of registered flexibility and interim preregistrations:
+The application of our preregistration template and Adaptive Preregistration methodology to the environmental flows modelling case study occurred across three distinct stages (@tbl-modelling-stages, Fig. 3), with two interim preregistrations (Version 1 and Version 2) preceding the finalised preregistration (Version 3, Supp Mat E), each corresponding to distinct phases in both the Preregistration and Modelling & Analysis processes. While preparing Version 1, the modellers decided that they needed to conduct some analysis to specify a set of appropriate candidate models. They preregistered a pilot analysis (Version 2) which used a subset of the full dataset to preserve some degree of data-dependent decision-making while permitting a degree of exploratory analysis. Results from the pilot analysis informed subsequent preregistration of the Main Analysis on the full dataset (Version 3, Supp. Mat. E). Several classes of data-dependent decisions (Liu et al. 2020) emerged during our case study, which were managed using a combination of registered flexibility and interim preregistrations:
 
 -   *Data-flow dependencies*: where the output of one decision is the input to another. For example, the models parameterised on the full dataset in the case study’s Main Analysis were subjected to a suite of model checks as outlined in the decision-trees in Preregistration Version 3, with the results of model checking informing *a priori* specified alternative model structures and model functional forms.
--   *Information dependency*: where one decision informs another. For example, outcomes from the exploratory pilot analysis (Interim Preregistration Version 2, Table 1) informed the model structures specified in Preregistration Version 3 (Table 1), as well as the decision heuristics for triggering their fitting and acceptance.
+-   *Information dependency*: where one decision informs another. For example, outcomes from the exploratory pilot analysis (Interim Preregistration Version 2, @tbl-modelling-stages) informed the model structures specified in Preregistration Version 3 (@tbl-modelling-stages), as well as the decision heuristics for triggering their fitting and acceptance.
 -   *Procedural dependency*: where downstream decisions would not exist if some alternative upstream decision was made instead. For example, if preliminary analysis of the data had not revealed over-dispersion or zero-inflation in the data, then the case study modellers would not have fitted zero-inflated Poisson models, nor would they have trialled accounting for over-dispersion or refitting using negative binomial models (Fig. 4).
 
 ### Interim Preregistration (Versions 1 and 2)
 
-Two initial candidate models were preregistered in Version 1 (Fig. 3), one for each study response variable, however modellers were unsure if these candidate models would be supported by the dataset due to spatio-temporal patchiness and heterogeneous density in the data. Preregistration Version 2 described an exploratory pilot analysis that aimed to resolve critical uncertainties about how to operationalise the models, given data constraints, and how to specify a candidate set of models that could feasibly be fitted to the full dataset (Table 1). This involved partitioning the dataset into a ‘Pilot Analysis’ subset for making subsequent data-informed modelling decisions, which were then preregistered in a subsequent preregistration of the ‘Main Analysis’ (Version 3, Table 1 and Fig. 3). The pilot analysis dataset consisted of observations from a single site with good temporal data coverage, while the main analysis dataset comprised the full dataset, including the pilot dataset. Preliminary analysis informed how to operationalise the models given the underlying structure of the dataset. For example, simple tests of data distributions within hierarchies were required to check for data spread and the presence of zero-inflation, while checks for collinearity among candidate predictor variables were needed to prevent confounding and overfitting, and to ensure relevant interactions were captured in the models. The same procedures for evaluating model fit and model checking were preregistered for both the pilot and main analysis (Fig. 3B), however the purpose of model checking in the Pilot Analysis was to identify appropriate model structures, whereas the purpose for the Main Analysis was to ensure that the fitted models were supported by the data.
+Two initial candidate models were preregistered in Version 1 (Fig. 3), one for each study response variable, however modellers were unsure if these candidate models would be supported by the dataset due to spatio-temporal patchiness and heterogeneous density in the data. Preregistration Version 2 described an exploratory pilot analysis that aimed to resolve critical uncertainties about how to operationalise the models, given data constraints, and how to specify a candidate set of models that could feasibly be fitted to the full dataset (@tbl-modelling-stages). This involved partitioning the dataset into a ‘Pilot Analysis’ subset for making subsequent data-informed modelling decisions, which were then preregistered in a subsequent preregistration of the ‘Main Analysis’ (Version 3, @tbl-modelling-stages and Fig. 3). The pilot analysis dataset consisted of observations from a single site with good temporal data coverage, while the main analysis dataset comprised the full dataset, including the pilot dataset. Preliminary analysis informed how to operationalise the models given the underlying structure of the dataset. For example, simple tests of data distributions within hierarchies were required to check for data spread and the presence of zero-inflation, while checks for collinearity among candidate predictor variables were needed to prevent confounding and overfitting, and to ensure relevant interactions were captured in the models. The same procedures for evaluating model fit and model checking were preregistered for both the pilot and main analysis (Fig. 3B), however the purpose of model checking in the Pilot Analysis was to identify appropriate model structures, whereas the purpose for the Main Analysis was to ensure that the fitted models were supported by the data.
 
 ### Final Preregistration (Version 3): Main Analysis
 
@@ -326,7 +326,7 @@ In Version 3 of the Preregistration, we derived and preregistered:
 | **Version 3:** (v0.13.0-v.0.20.1) | Describe Main Analysis, including specification of decision tree for model selection process based on results of pilot analysis. | Conducted modelling and analysis as outlined in preregistration. Reported deviations and rationale as necessary. |
 |  |  |  |
 
-: Table 1 - Key stages of the modelling and Adaptive Preregistration process implemented in the environmental flows modelling case study. Version numbers in parentheses are GitHub tags, marking snapshots of the repository for each Preregistration Version.
+: Key stages of the modelling and Adaptive Preregistration process implemented in the environmental flows modelling case study. Version numbers in parentheses are GitHub tags, marking snapshots of the repository for each Preregistration Version {#tbl-modelling-stages}
 
 <!--# Insert Figure 3 - case study workflow -->
 
@@ -358,7 +358,7 @@ The structure and contents of the preregistration template can encourage Good Mo
 
 Our case study researchers reported that the most challenging aspects of Adaptive Preregistration involved anticipating analysis decisions in advance, in addition to changes to model management and timelines. Registering flexibility requires careful thought and time to adequately capture analytic decision-points and describe the process for resolving those decisions. In our case study, while the decision heuristic for choosing model functional form was accurately preregistered, the process for determining model structure was underspecified in the ‘Main Analysis’ preregistration. This occurred because the preregistration did not specify that the heuristic should only be applied to some models and not others (i.e. Flow event models and not Flow regime models).
 
-The preregistration, while detailed, did not adequately capture the modellers' intended and implemented model selection strategy, where after fitting the set of simpler models identified from the pilot study (preregistration version 2, Table 1), the modellers would iteratively trial different combinations of model terms to make the models closer to the more complex ‘maximal’ models identified in the initial preregistration (preregistration version 1, Table 1). The preregistered specification did not explain which combinations of model terms would be trialled, and in what order they would be trialled, rendering components of the model selection process unregistered.
+The preregistration, while detailed, did not adequately capture the modellers' intended and implemented model selection strategy, where after fitting the set of simpler models identified from the pilot study (preregistration version 2, @tbl-modelling-stages), the modellers would iteratively trial different combinations of model terms to make the models closer to the more complex ‘maximal’ models identified in the initial preregistration (preregistration version 1, @tbl-modelling-stages). The preregistered specification did not explain which combinations of model terms would be trialled, and in what order they would be trialled, rendering components of the model selection process unregistered.
 
 The case-study researchers noted that anticipating potential analysis scenarios and decision pathways was complicated by large uncertainties about the underlying system dynamics in a complex and patchy dataset. Tight project turn-around times meant that there was limited time to iteratively review analysis specification decisions, resulting in some decisions and components of the modelling process being omitted from the preregistration. Following our Adaptive Preregistration protocol more closely may have avoided underspecificity in the case-study. However, because of temporal and resource constraints on the case study project, compounded by the resource costs required to upskill some members of the research team with git and GitHub, the protocol for implementing Adaptive Preregistration with git & GitHub as outlined in our guide was not fully followed in the case-study preregistration.
 
